2016-06-09  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r25478.

	* nasl/nasl_snmp.c (snmpv3_get, snmpv1v2c_get): Set MIBS environment
	variable to "".

2016-06-08  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r25463.

	* nasl/exec.c (cell2str): Use memcpy instead of strncpy, in case it is
	not a string when type is DATA.

2016-06-08  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r25462.

	* nasl/exec.c (cell2str): In the STR and DATA case, copy only size
	bytes from c->x.str_val instead of size + 1, because str_val may not
	have the extra byte for the trailing NULL when type is DATA.

2016-05-31  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r25434.

	* nasl/nasl_builtin_find_service.c (plugin_run_find_service): Fix memory
	leak.

2016-05-30  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r25409, r25413 and r25415.

	* misc/openvas_proctitle.c (proctitle_init): Fix memory leak.

	* nasl/nasl_builtin_find_service.c (plugin_run_find_service): Fix memory
	leak.

2016-05-30  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r25381, r25395 and r25398.

	* misc/network.c (ovas_scanner_context_new): Fix allocated memory size.
	(set_ids_evasion_mode, open_stream_connection_ext): Fix memory leak.
	(ovas_scanner_context_s): Add tls_session element.
	(ovas_scanner_context_attach): Save context tls session.

	* nasl/nasl_http.c (_http_req): Fix memory leak.

	* nasl/nasl_misc_funcs.c (nasl_typeof): Fix smaller-by-one memory
	allocation.

	* misc/bpf_share.c (bpf_open_live), misc/plugutils.c (mark_post),
	nasl/nasl_builtin_find_service.c (plugin_do_run): Fix memory leaks.

	* imsc/plugutils.h: Constify function parameter.

	* nasl/nasl_socket.c (nasl_recv): Fix off-by-one memory write.

2016-05-26  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r25392.

	* base/kb_redis.c (get_redis_ctx): Connect inside the retry loop, in
	case the connection is lost between retries.
